[project]
name = "autogradus"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
